[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]
edition = "2021"

[lib]
doctest = false
bench = false

[dependencies]
aoc-runner = "~0.3"
aoc-runner-derive = "~0.3"
arrayvec = "~0.7"
itertools = "~0.10"

[profile.release]
overflow-checks = true
